[package]
name = "k3s-proxmox-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
mktemp = "0.5.1"
network-interface = "2.0.0"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
