[package]
name = "k3s-proxmox-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "env"] }
dotenv = "0.15.0"
mktemp = "0.5.1"
network-interface = "2.0.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
urlencoding = "2.1.3"
